# cdk-bootstrap-with-permissions-boundary-and-kms-cmk

./: .cfnlintrc.yaml  README.md  cdk.json  custom-no-op.yaml  custom-with-op.yaml  customized-bootstrap-template.yaml  package-lock.json  package.json  pyproject.toml
.devcontainer/: .env  code.dockerfile  compose.yaml  devcontainer.json
cfn/: kms-cmk-primary.yaml
cfn/bootstrap/: customized-bootstrap-template.yaml
cfn/kms-cmk/: kms-cmk-replica.yaml
lib/: role-stack.ts  temp-stack.ts
