[tool.poetry]
name = "cdk-bootstrap-with-permissions-boundary-and-kms-cmk"
version = "0.1.0"
description = ""
authors = ["k3n-74"]
readme = "README.md"
packages = [{include = "cdk-bootstrap-with-permissions-boundary-and-kms-cmk"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
cfn-lint = "^0.66.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
